# jina-ai-serve

./: extra-requirements.txt  pyproject.toml  setup.py
.github/: labeler.yml
.github/workflows/: autocommit.yml  benchmark.yml  build-old-docs.yml  cd.yml  ci-no-code-related.yml  ci.yml  codeql-analysis.yml  commit-lint.yml  force-docker-build.yml  force-docs-build.yml  force-release.yml  label-pr.yml  nightly-tests.yml  tag.yml  update-announcement.yml
Dockerfiles/: debianx.Dockerfile  pip-perf.Dockerfile  pip.Dockerfile  protogen-3.21.Dockerfile  protogen.Dockerfile  test-pip.Dockerfile
conda/: meta.yaml
docs/: conf.py  index.md
jina/: __init__.py  _docarray_legacy.py  importer.py
jina/resources/: extra-requirements.txt
jina/serve/consensus/: README.md
scripts/: create-conda-recipe.py
